@@ -81,3 +81,4 @@ Changes in version 1.9.x
 + Added loadFromHumann
 + calculateDMM: deprecated/updated outdated functions
 + Added Tengeler2020 dataset
++ *RDA & *CCA: calculate also statistical significance
